Now using modelmapper and Streamex in SqlConnector